# NEUROLEX

./: L.IPYNB  README.md  app.py  main.py  pyproject.toml  smoke_test.py
neurolex/: __init__.py  config.py  utils.py
neurolex/modules/: __init__.py  classifier.py  dialogue.py  hallucination.py  ner.py  rag_qa.py  semantic_search.py  summarizer.py  topic_modeler.py  toxicity.py  translator.py
pages/: 01_Text_Classification.py  02_NER_Entity_Linking.py  03_Semantic_Search.py  04_QA_RAG.py  05_Summarization.py  06_Translation.py  07_Topic_Modeling.py  08_Dialogue_System.py  09_Hallucination_Detection.py  10_Bias_Toxicity.py
