[project]
name = "neurolex"
version = "1.0.0"
description = "End-to-end Advanced NLP System covering 10 major NLP tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.31.0",
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "sentence-transformers>=2.5.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.19.0",
    "wikipedia-api>=0.6.0",
    "spacy>=3.7.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "accelerate>=0.27.0",
    "sentencepiece>=0.1.99",
    "sacremoses>=0.1.1",
]

[project.scripts]
neurolex = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neurolex"]
